Updated stlying for quizResults section, fixed spacing for contents of the section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,14 +1,27 @@
 header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 100%;
-    height: 5rem;
-    background-color: aqua;
+    height: 10rem;
+    background-color: black;
     border: .5rem solid black;
+}
+
+h1 {
+    font-family: monospace;
+    font-size: xx-large;
+    font-weight: bolder;
+    color: white;
+}
+
+body {
+    background-color: rgb(65, 65, 65);
 }
 
 main {
     display: flex;
     justify-content: space-around;
-    align-items: center;
 }
 
 section {
@@ -17,9 +30,9 @@ section {
     align-items: center;
     width: 45%;
     height: 30rem;
-    margin: 2px;
+    margin-top: 4rem;
     border: .5rem solid black;
-    background-color: green;
+    background-color: rgb(58, 12, 88);
 }
 
 /* article {
@@ -38,6 +51,12 @@ div {
     background-color: pink;
 }
 
+/* Targets the right-side section to give space between the divs within */
+#quizResults {
+    display: flex;
+    justify-content: space-around;
+}
+
 /* Left Article that contains the start button */
 #questions-article {
     display: flex;
@@ -47,12 +66,15 @@ div {
     height: 20rem;
     /* margin: 2px; */
     border: .5rem solid black;
-    background-color: brown;
+    background-color: rgb(57, 87, 221);
 }
 
 #high-score {
-    width: 5rem;
-    height: 5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 20em;
+    height: 20rem;
     /* margin: 2px; */
     border: .5rem solid black;
     background-color: red;
@@ -68,3 +90,23 @@ div {
     margin: 4px 2px;
     cursor: pointer;
   }
+
+
+#timer-box {
+    width: 15rem;
+    height: 10rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+
+#timer {
+    width: 10rem;
+    text-align: center;
+    border: 2px solid black;
+    font-family: monospace;
+    font-size: x-large;
+
+}
